clusters/crc-cryostat-ossm3/overlays/ossm3-spring-boot-demo2-configs/istio-configs.yaml
---
# Source: spring-boot-demo2/templates/istio-configs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-demo2
  namespace: istio-ingress3
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
      - spring-boot-demo2-istio-ingress3.apps-crc.testing
      - spring-boot-demo2-istio-ingress.apps-crc.testing
    tls:
      mode: SIMPLE
      credentialName: spring-boot-demo2-cert
...
---
# Source: spring-boot-demo2/templates/istio-configs.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-boot-demo2-tmp
  namespace: istio-ingress3
spec:
  host: spring-boot-demo2-istio-ingress3.apps-crc.testing
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
...
